--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h5><sup>1</sup>Tsinghua University, <sup>2</sup>Xidian University, <sup>3</sup>Nanyang Technological
           University, <sup>4</sup>The University of Sydney</h5>
         <div class="publications project-links">
-          <a href="" class="btn" role="button" target="_blank" rel="noopener noreferrer">arXiv</a>
+          <a href="https://arxiv.org/abs/2302.03665" class="btn" role="button" target="_blank" rel="noopener noreferrer">arXiv</a>
           <a href="https://github.com/LinghaoChan/HumanMAC" class="btn" role="button" target="_blank"
             rel="noopener noreferrer">Code</a>
         </div>
@@ -139,7 +139,7 @@
       </div>
 
       <div style="margin-top:50px; padding: 0px !important">
-        <h3 style="text-align: center; margin-bottom:20px">Examples of Prediction Resultss
+        <h3 style="text-align: center; margin-bottom:20px">Examples of Prediction Results
         </h3>
         <div class="justify-content-center list-group list-group-horizontal" id="list-tab" role="tablist">
           <div class="list-group list-group-horizontal" style="max-width:600px">
@@ -690,6 +690,11 @@
     </div>
   </div>
   </div>
+      
+  <br>
+  <p style="text-align:right;font-size:small;">
+    The website template was adapted from <a>German Barquero</a>.
+  </p>
 
 
   <!-- JavaScripts -->
