update arxiv info

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <a href="" target="_blank" rel="noopener noreferrer">Jiawei Zhang</a><sup>2</sup>,
           <a href="https://scholar.google.com/citations?user=W5796yEAAAAJ" target="_blank"
             rel="noopener noreferrer">Yewen Li</a><sup>3</sup>,
-          <a href="https://www.linkedin.com/in/yrpang/" target="_blank" rel="noopener noreferrer">Yiren
+          <a href="" target="_blank" rel="noopener noreferrer">Yiren
             Pang</a><sup>2</sup>,
           <a href="https://xiaoboxia.github.io/" target="_blank" rel="noopener noreferrer">Xiaobo Xia</a><sup>4</sup>,
           and
@@ -493,9 +493,9 @@
             <pre><code class="language-bibtex" data-lang="bibtex"><span class="nc">@article</span><span class="p">{</span><span class="nl">chen2023humanmac</span><span class="p">,</span>
 <span class="na">title</span><span class="p">=</span><span class="s">{HumanMAC: Masked Motion Completion for Human Motion Prediction}</span><span class="p">,</span>
 <span class="na">author</span><span class="p">=</span><span class="s">{Chen, Ling-Hao and Zhang, Jiawei and Li, Yewen and Pang, Yiren and Xia, Xiaobo and Liu, Tongliang}</span><span class="p">,</span>
+<span class="na">journal</span><span class="p">=</span><span class="s">{arXiv preprint arXiv:2302.03665}</span><span class="p">,</span>
 <span class="na">year</span><span class="p">=</span><span class="s">{2023}</span>
 <span class="p">}</span></code></pre>
-            <!-- <span class="na">journal</span><span class="p">=</span><span class="s">{arXiv preprint arXiv:xxxx}</span><span class="p">,</span> -->
           </figure>
 
 
