--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         <h5><sup>1</sup>Tsinghua University, <sup>2</sup>Xidian University, <sup>3</sup>Nanyang Technological
           University, <sup>4</sup>The University of Sydney</h5>
         <div class="publications project-links">
-          <a href="https://arxiv.org/abs/2302.03665" class="btn" role="button" target="_blank" rel="noopener noreferrer">arXiv</a>
+          <a href="https://arxiv.org/abs/2302.03665" class="btn" role="button" target="_blank"
+            rel="noopener noreferrer">arXiv</a>
           <a href="https://github.com/LinghaoChan/HumanMAC" class="btn" role="button" target="_blank"
             rel="noopener noreferrer">Code</a>
         </div>
@@ -103,6 +104,21 @@
             Comprehensive experiments on benchmarks confirm the superiority of the proposed framework. The project page
             is available at <a href="https://lhchen.top/HumanMAC">https://lhchen.top/HumanMAC</a>.
           </i>
+        </div>
+      </div>
+
+      <div class="h-100 d-flex align-items-center justify-content-center" style="margin-top: 30px">
+        <div class="project-narrow" id="architecture" style="text-align: justify;">
+          <h3 style="text-align: center;">Video</h3>
+        </div>
+      </div>
+
+      <div class="center-container">
+        <div class="card card-video" style="margin-top:20px">
+          <iframe width="100%" style="aspect-ratio: 16 / 9;" src="https://www.youtube.com/embed/vfde9GdUHBs"
+            title="HumanMAC: Masked Motion Completion for Human Motion Prediction" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
         </div>
       </div>
 
@@ -353,7 +369,8 @@
                 <div class="tab-pane fade" id="fix_right_arm" role="tabpanel">
                   <img class="gif lazy" src="./assets/img/transfer/placeholder_comparison.png"
                     data-src="./assets/img/control/right_arm.gif" style='width:100%'>
-                  <p style="margin: 10px;">When fixing the right arm, we can observe that the torso is clearly affected by the fixation of the
+                  <p style="margin: 10px;">When fixing the right arm, we can observe that the torso is clearly affected
+                    by the fixation of the
                     right arm, and likewise
                     the
                     rest of the body.
@@ -504,7 +521,7 @@
     </div>
   </div>
   </div>
-      
+
   <br>
   <p style="text-align:right;font-size:small;">
     The website template was adapted from <a>German Barquero</a>.
