--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             switch of different categories of motions effectively, which is significant in realistic tasks, <i>e.g.</i>,
             the animation task.
             Comprehensive experiments on benchmarks confirm the superiority of the proposed framework. The project page
-            is available at <a href="https://lhchen.top/HumanMAC">https://lhchen.top/HumanMAC</a>.
+            is available at <a href="https://lhchen.top/Human-MAC">https://lhchen.top/Human-MAC</a>.
           </i>
         </div>
       </div>
