--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         </h3>
         <h5><sup>1</sup>Tsinghua University, <sup>2</sup>Xidian University, <sup>3</sup>Nanyang Technological
           University, <sup>4</sup>The University of Sydney</h5>
+        <h5>ICCV 2023</h5>
         <div class="publications project-links">
           <a href="https://arxiv.org/abs/2302.03665" class="btn" role="button" target="_blank"
             rel="noopener noreferrer">arXiv</a>
