--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
           <a href="https://github.com/LinghaoChan/HumanMAC" class="btn" role="button" target="_blank"
             rel="noopener noreferrer">Code</a>
         </div>
+
+        <iframe src="https://ghbtns.com/github-btn.html?user=linghaoChan&repo=HumanMAC&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
       </header>
 
       <!---------------------------- ABSTRACT ---------------------------->
