add github star button

--- a/index.html
+++ b/index.html
@@ -74,13 +74,12 @@
         </h3>
         <h5><sup>1</sup>Tsinghua University, <sup>2</sup>Xidian University, <sup>3</sup>Nanyang Technological
           University, <sup>4</sup>The University of Sydney</h5>
-        <h5>ICCV 2023</h5>
+        <div class="flex-center"><strong style="font-size: 1.35rem;padding-right: 20px; color: #B509AC;">ICCV 2023</strong><iframe src="https://ghbtns.com/github-btn.html?user=linghaoChan&repo=HumanMAC&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe></div>
         <div class="publications project-links">
           <a href="https://arxiv.org/abs/2302.03665" class="btn" role="button" target="_blank"
             rel="noopener noreferrer">arXiv</a>
           <a href="https://github.com/LinghaoChan/HumanMAC" class="btn" role="button" target="_blank"
             rel="noopener noreferrer">Code</a>
-          <iframe src="https://ghbtns.com/github-btn.html?user=linghaoChan&repo=HumanMAC&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
 
         </div>
 
