--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
             rel="noopener noreferrer">arXiv</a>
           <a href="https://github.com/LinghaoChan/HumanMAC" class="btn" role="button" target="_blank"
             rel="noopener noreferrer">Code</a>
+          <a href="https://lhchen.top/slides/ICCV-23/HumanMAC-slide.pdf" class="btn" role="button" target="_blank"
+            rel="noopener noreferrer">Slides</a>
+          <a href="https://lhchen.top/slides/ICCV-23/poster.pdf" class="btn" role="button" target="_blank"
+            rel="noopener noreferrer">Poster</a>
 
         </div>
 
