--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
             <pre><code class="language-bibtex" data-lang="bibtex"><span class="nc">@article</span><span class="p">{</span><span class="nl">chen2023humanmac</span><span class="p">,</span>
 <span class="na">title</span><span class="p">=</span><span class="s">{HumanMAC: Masked Motion Completion for Human Motion Prediction}</span><span class="p">,</span>
 <span class="na">author</span><span class="p">=</span><span class="s">{Chen, Ling-Hao and Zhang, Jiawei and Li, Yewen and Pang, Yiren and Xia, Xiaobo and Liu, Tongliang}</span><span class="p">,</span>
-<span class="na">booktitle</span><span class="p">=</span><span class="s">{Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)}</span><span class="p">,</span>
+<span class="na">journal</span><span class="p">=</span><span class="s">{Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)}</span><span class="p">,</span>
 <span class="na">year</span><span class="p">=</span><span class="s">{2023}</span>
 <span class="p">}</span></code></pre>
           </figure>
